--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20325,5 +20325,23 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 /*# sourceMappingURL=antd.css.map*/
 body {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif; }
+  padding: 0; }
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 500px; }
+  .form-container .form-field {
+    margin: 10px;
+    display: flex;
+    justify-content: stretch;
+    align-items: center; }
+    .form-container .form-field input {
+      border-radius: 6px;
+      border: none;
+      box-shadow: 10px 10px 10px lightgrey;
+      width: 100%; }
+    .form-container .form-field * {
+      margin: 5px; }
