--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -22,5 +22,27 @@ $fourth: #68762a;
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 500px;
+  .form-field {
+    margin: 10px;
+    display: flex;
+    justify-content: stretch;
+    align-items: center;
+    input {
+      border-radius: 6px;
+      border: none;
+      box-shadow: 10px 10px 10px lightgrey;
+      width: 100%;
+    }
+    * {
+      margin: 5px;
+    }
+  }
 }
