--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -28,17 +28,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  width: 500px;
+  align-items: stretch;
+  width: 100vw;
   .form-field {
     margin: 10px;
     display: flex;
-    justify-content: stretch;
     align-items: center;
     input {
       border-radius: 6px;
-      border: none;
-      box-shadow: 10px 10px 10px lightgrey;
       width: 100%;
     }
     * {
