--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20358,3 +20358,7 @@ body {
   height: 32px;
   background: rgba(255, 255, 255, 0.2);
   margin: 16px; }
+
+.ant-menu.ant-menu-dark .ant-menu-item-selected,
+.ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
+  background-color: #4d946e; }
