--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -23,25 +23,46 @@ body {
   background-color: $bg;
 }
 
+.bold {
+  font-weight: bolder;
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  align-items: stretch;
-  width: 100vw;
-  .form-field {
-    margin: 0 90px;
+  height: 100vh;
+  text-align: center;
+  .form-component {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    input {
-      border-radius: 6px;
-      width: 100%;
-      border: none;
-      box-shadow: 5px 10px 15px lightgray;
-      padding: 5px;
-    }
-    * {
-      margin: 5px;
+    width: 100vw;
+    .form-field {
+      min-width: 660px;
+      margin: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      @media screen and (max-width: 690px) {
+        min-width: 95vw;
+      }
+      input {
+        border-radius: 6px;
+        width: 100%;
+        border: 1px solid rgba(0, 0, 0, 0);
+        box-shadow: 10px 10px 7px lightgrey;
+        padding: 7px;
+        box-sizing: border-box;
+        &:focus {
+          border: 1px $primary solid;
+        }
+      }
+      * {
+        margin: 5px;
+      }
     }
   }
 }
