--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Anurati;
+  src: url("/fonts/Anurati-Regular.otf"); }
+
 /*!
  * 
  * antd v3.10.9
@@ -20326,7 +20330,7 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 body {
   margin: 0;
   padding: 0;
-  background-color: #e4e8f0; }
+  background-image: linear-gradient(#e4e8f0, #aae4c5, #4d946e); }
 
 .bold {
   font-weight: bolder; }
@@ -20383,3 +20387,75 @@ body {
 .ant-menu.ant-menu-dark .ant-menu-item-selected,
 .ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
   background-color: #4d946e; }
+
+.home-page {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 64px); }
+  .home-page .commands {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    .home-page .commands .title {
+      font-family: "Anurati";
+      font-size: 5rem;
+      text-align: center; }
+    .home-page .commands button {
+      margin: 30px;
+      font-size: 40px;
+      height: 60px; }
+  .home-page .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%; }
+    .home-page .logo img {
+      height: 17rem; }
+  @media only screen and (max-width: 600px) {
+    .home-page {
+      flex-direction: column; }
+      .home-page .commands {
+        width: 100%; }
+        .home-page .commands .title {
+          font-size: 2rem; }
+      .home-page .logo {
+        width: 100%;
+        position: relative; }
+        .home-page .logo div {
+          position: absolute; } }
+
+.pulse {
+  position: absolute;
+  z-index: 10;
+  display: block;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background: #cca92c;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+  animation: pulse 2s infinite; }
+
+.pulse:hover {
+  animation: none; }
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4); }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0); }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0); } }
+
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4); }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 10px rgba(204, 169, 44, 0); }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0); } }
