--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -5,10 +5,15 @@ $bg: #e4e8f0;
 
 //  Colors to decide on
 $first: #4d946e;
+$first2: #aae4c5;
 $second: #7b4b36;
 $third: #3c883c;
 $fourth: #68762a;
 
+@font-face {
+  font-family: Anurati;
+  src: url("/fonts/Anurati-Regular.otf");
+}
 // ----------------------------------------
 // To install Boostrap:
 // 1) Run in the client folder: $ npm i bootstrap
@@ -20,7 +25,7 @@ $fourth: #68762a;
 body {
   margin: 0;
   padding: 0;
-  background-color: $bg;
+  background-image: linear-gradient($bg, $first2, $first);
 }
 
 .bold {
@@ -88,4 +93,107 @@ body {
 .ant-menu.ant-menu-dark .ant-menu-item-selected,
 .ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
   background-color: $first;
+}
+
+.home-page {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 64px);
+
+  .commands {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .title {
+      font-family: "Anurati";
+      font-size: 5rem;
+      text-align: center;
+    }
+
+    button {
+      margin: 30px;
+
+      // padding: 30px;
+      font-size: 40px;
+      height: 60px;
+    }
+  }
+  .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+
+    img {
+      height: 17rem;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    flex-direction: column;
+
+    .commands {
+      width: 100%;
+
+      .title {
+        font-size: 2rem;
+      }
+    }
+
+    .logo {
+      width: 100%;
+      position: relative;
+
+      div {
+        position: absolute;
+      }
+    }
+  }
+}
+
+//! PULSE ANIMATION
+
+.pulse {
+  position: absolute;
+  z-index: 10;
+  display: block;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background: #cca92c;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+  animation: pulse 2s infinite;
+}
+.pulse:hover {
+  animation: none;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+  }
 }
