--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -46,9 +46,10 @@ body {
 * {
   font-family: MoonRegular;
 }
-h1 {
-  font-family: "Anurati";
-  font-size: 5rem;
+
+.title {
+  font-size: 3rem;
+  text-align: center;
 
   @media only screen and (max-width: 730px) {
     font-size: 4rem;
@@ -56,6 +57,11 @@ h1 {
   @media only screen and (max-width: 410px) {
     font-size: 3.1rem;
   }
+}
+
+.brand-title {
+  font-family: "Anurati";
+  letter-spacing: 5px;
 }
 
 .bold {
@@ -67,7 +73,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2em 0;
+  height: calc(100vh - 64px);
   text-align: center;
   .form-component {
     display: flex;
@@ -125,15 +131,6 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
-    .title {
-      font-family: "Anurati";
-      font-size: 3rem;
-      text-align: center;
-      h1 {
-        margin-top: 0.5em;
-      }
-    }
 
     button {
       margin: 30px;
