--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -62,14 +62,15 @@ body {
     display: none;
   }
   .logo-el {
-    display: flex;
-    align-items: center;
-
-    span {
-      padding: 0 10px;
-      color: black;
-      font-family: MoonBold;
-      font-size: 1.4rem;
+    a {
+      display: flex;
+      align-items: center;
+      span {
+        padding: 0 10px;
+        color: black;
+        font-family: MoonBold;
+        font-size: 1.4rem;
+      }
     }
   }
 
@@ -77,6 +78,21 @@ body {
     a {
       padding: 0 20px;
       color: black;
+
+      &.login {
+        font-size: 1rem;
+      }
+      &.signup {
+        font-size: 1rem;
+        padding: 10px 20px;
+        border: 2px solid $bg;
+        border-radius: 10px;
+        color: $bg;
+
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.1);
+        }
+      }
     }
   }
   @media only screen and (max-width: 730px) {
@@ -110,7 +126,7 @@ body {
 .brand-title {
   font-size: 5rem;
   text-align: center;
-  font-family: "Anurati";
+  font-family: "MoonBold";
   letter-spacing: 5px;
   @media only screen and (max-width: 730px) {
     font-size: 4rem;
