--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -132,7 +132,9 @@ body {
   display: flex;
   flex-direction: row;
   height: calc(100vh - 64px);
-  color: $bg;
+  background-image: url("/images/homepage-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   .box {
     display: flex;
     justify-content: center;
