--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -48,6 +48,12 @@ body {
   font-family: MoonRegular;
 }
 
+.sidenav {
+  background-color: $bg;
+  height: 100%;
+  width: 75%;
+  position: fixed;
+}
 .nav-bar-container {
   display: flex;
   flex-direction: row;
@@ -57,6 +63,10 @@ body {
   height: 90px;
   margin: 0;
   box-sizing: border-box;
+
+  .side-nav-link {
+    display: none;
+  }
   .menu-icon {
     display: none;
   }
@@ -65,9 +75,7 @@ body {
     color: white;
     font-family: MoonBold;
   }
-  .sidenav {
-    display: none;
-  }
+
   .logo-el {
     a {
       display: flex;
@@ -109,12 +117,15 @@ body {
     }
   }
   @media only screen and (max-width: 730px) {
-    margin: 10px 10px;
+    padding: 30px 25px;
 
+    .side-nav-link {
+      display: inherit;
+    }
     .menu-icon {
       display: inline-block;
       font-size: 25px;
-      color: black;
+      color: white;
     }
     .user-el {
       a {
@@ -270,6 +281,9 @@ body {
         font-size: 1.3rem;
         color: $bg;
       }
+    }
+    @media only screen and (max-width: 730px) {
+      padding: 0 20px;
     }
   }
 }
