--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -161,6 +161,41 @@ body {
   }
 }
 
+//earthie styling
+.chips-container {
+  .earthies-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    .earthie-item {
+      margin: 30px;
+    }
+  }
+  .no-device-message {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h3 {
+      text-align: center;
+      width: 600px;
+    }
+    @media screen and (max-width: 900px) {
+      h3 {
+        width: 400px;
+      }
+    }
+    @media screen and (max-width: 500px) {
+      h3 {
+        width: 250px;
+      }
+    }
+  }
+}
+
 .bold {
   font-weight: bolder;
 }
