--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20436,6 +20436,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   min-height: 100vh; }
   .chips-container .earthies-list .earthie-item {
     margin: 30px; }
