--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20465,7 +20465,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 111px);
   text-align: center; }
   .form-container h2 {
     color: #f0f2f5; }
@@ -20515,6 +20515,9 @@ body {
 .ant-menu.ant-menu-dark .ant-menu-item-selected,
 .ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
   background-color: #4d946e; }
+
+.ant-drawer-title {
+  font-size: 28px; }
 
 .home-page {
   display: flex;
