--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20519,6 +20519,7 @@ body {
 .ant-drawer-title {
   font-size: 28px; }
 
+b
 .home-page {
   display: flex;
   flex-direction: row;
@@ -20526,21 +20527,25 @@ body {
   background-image: url("/images/homepage-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat; }
-  .home-page .box {
+  b
+.home-page .box {
     display: flex;
     justify-content: center;
     flex-direction: column;
     width: 700px;
     padding-left: 100px;
     box-sizing: border-box; }
-    .home-page .box h3 {
+    b
+.home-page .box h3 {
       color: #f0f2f5;
       font-size: 1.2rem; }
-    .home-page .box h1 {
+    b
+.home-page .box h1 {
       font-size: 3rem;
       font-weight: bolder;
       color: #f0f2f5; }
-    .home-page .box .actions .button-form {
+    b
+.home-page .box .actions .button-form {
       padding: 10px 20px;
       border-radius: 10px;
       font-size: 1.5rem;
@@ -20548,14 +20553,17 @@ body {
       background-color: #7b4b36;
       color: #f0f2f5;
       border: none; }
-      .home-page .box .actions .button-form:hover {
+      b
+.home-page .box .actions .button-form:hover {
         cursor: pointer;
         background-color: #7a5c4e; }
-    .home-page .box .description p {
+    b
+.home-page .box .description p {
       font-size: 1.3rem;
       color: #f0f2f5; }
     @media only screen and (max-width: 730px) {
-      .home-page .box {
+      b
+.home-page .box {
         padding: 0 20px; } }
 
 .pulse {
