--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20481,6 +20481,14 @@ body {
       display: flex;
       justify-content: center;
       align-items: center; }
+      .form-container .form-component .form-field i {
+        margin: 5px; }
+      .form-container .form-component .form-field .two-input-holder {
+        display: flex;
+        justify-content: center; }
+        @media screen and (max-width: 690px) {
+          .form-container .form-component .form-field .two-input-holder {
+            flex-direction: column; } }
       .form-container .form-component .form-field .button-form {
         padding: 10px 20px;
         border-radius: 10px;
@@ -20496,25 +20504,22 @@ body {
         border-radius: 4px;
         width: 100%;
         border: 1px solid rgba(0, 0, 0, 0);
-        box-shadow: 0px 8px 13px #3c883c;
         padding: 7px;
         box-sizing: border-box; }
-        .form-container .form-component .form-field input:focus {
-          border: 1px #32c3ff solid; }
-      .form-container .form-component .form-field * {
+      .form-container .form-component .form-field .content {
         margin: 5px; }
       @media screen and (max-width: 690px) {
         .form-container .form-component .form-field {
           min-width: 95vw; } }
+    .form-container .form-component .form-field-col6 {
+      display: flex;
+      justify-content: center;
+      align-items: center; }
 
 @media only screen and (max-width: 730px) {
   .ant-layout-header {
     display: flex;
     justify-content: center; } }
-
-.ant-menu.ant-menu-dark .ant-menu-item-selected,
-.ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
-  background-color: #4d946e; }
 
 .ant-drawer-title {
   font-size: 28px; }
@@ -20593,4 +20598,4 @@ body {
     box-shadow: 0 0 0 0 rgba(204, 169, 44, 0); } }
 
 i {
-  color: #afeecb; }
+  color: #a6c5b4; }
