--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -227,10 +227,21 @@ body {
       }
       .two-input-holder {
         display: flex;
-
+        width: 100%;
         justify-content: center;
+        .field-main {
+          width: 100%;
+          margin-bottom: 5px;
+        }
+        .ant-select {
+          width: 200px;
+        }
         @media screen and (max-width: 690px) {
           flex-direction: column;
+          margin-top: 5px;
+          .ant-select {
+            width: 100%;
+          }
         }
       }
       .button-form {
